salesforce_app/force-app/main/default/objects/Attendance__c/fields/Intern__c.field-meta.xml
<CustomField>
    <fullName>Intern__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intern</label>
    <referenceTo>Intern__c</referenceTo>
    <relationshipLabel>Attendances</relationshipLabel>
    <relationshipName>Attendances</relationshipName>
    <type>Lookup</type>
</CustomField>