salesforce_app/force-app/main/default/objects/Attendance__c/fields/Working_Hours__c.field-meta.xml
<CustomField>
    <fullName>Working_Hours__c</fullName>
    <description>Calculates the number of hours worked based on Login and Logout times.</description>
    <formula>(Logout_Time__c - Login_Time__c) * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Working Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>